--- a/GovernmentPortal/Operations/templates/Operations/homepage.html
+++ b/GovernmentPortal/Operations/templates/Operations/homepage.html
@@ -13,4 +13,8 @@
 {% block content %}
  <!-- Add the content of the page here -->
  <h1>Home page</h1>
+ <h1>Home page</h1>
+ <h1>Home page</h1>
+ <h1>Home page</h1>
+ <h1>Home page</h1>
 {% endblock%}
