--- a/GovernmentPortal/static/css/projects.css
+++ b/GovernmentPortal/static/css/projects.css
@@ -1,6 +1,7 @@
 .projects-wrapper{
     display:flex;
-    width: 80%;
+    justify-content: space-between;
+    width: 90%;
     margin: 0 auto;
     margin-top: 40px;
 }
@@ -20,9 +21,53 @@
 .project{
     padding: 15px;
 }
+.project h5 {
+    
+}
 .project h3 {
     border-bottom: 1px solid #ccc;
     padding-bottom: 10px;
     color: orange;
+    font-size: 22px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
    
+}
+.navigation h4{
+    margin-bottom: 25px;
+}
+.navigation ul {
+    list-style: none;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3,30%);
+    column-gap: 20px;
+    row-gap:25px;
+}
+
+.navigation ul li {
+    
+    align-content: center;
+    text-align: center;
+    background-color: beige;
+    padding: 5px 7px;
+    width: 100%;
+}
+
+.navigation ul li a {
+    text-decoration: none;
+    color: rgb(88, 88, 88);
+}
+
+p span {
+    font-weight: bold;
+}
+
+.heading {
+    font-size: 25px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    
 }
